--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
 }
 
 .footer {
@@ -132,11 +132,12 @@ a {
 }
 
 .button {
+  display: inline-block;
   position: relative;
   padding: 8px 20px 12px 16px;
   text-decoration: underline 0.5px;
   text-underline-offset: 0.1em;
-  @apply text-base font-kurobara text-lightyellow;
+  @apply text-base text-center font-kurobara text-lightyellow;
 }
 .button:before {
   content: "";
