--- a/styles/article.css
+++ b/styles/article.css
@@ -8,15 +8,15 @@
 }
 
 .article h2 {
-  @apply text-xl font-bold mt-10 mb-6;
+  @apply text-xl font-bold mt-12 mb-6;
 }
 .article h3 {
-  @apply text-lg font-bold my-6;
+  @apply text-base font-bold my-6;
 }
 
 /* Links */
 .article a {
-  @apply text-blue-600 underline leading-7;
+  @apply text-cyan-500 underline leading-7;
 }
 .article a:hover {
   @apply decoration-dashed;
