--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@ a {
 
 .footer {
   border-top: 1px solid #444;
-  padding: 3rem 0.8rem 0;
+  padding: 3rem 0 0;
   @apply flex flex-col space-y-2 items-start;
 }
 
@@ -121,7 +121,7 @@ a {
 
 .card h2 {
   margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: bold;
 }
 
@@ -146,8 +146,8 @@ a {
   left: -5px;
   width: 100%;
   height: 100%;
-  border-bottom: 1px solid white;
-  border-right: 2px solid white;
+  border-bottom: 1px solid;
+  border-right: 2px solid;
   @apply border-lightyellow;
 }
 .button:after {
@@ -157,8 +157,8 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  border-top: 1px solid white;
-  border-left: 2px solid white;
+  border-top: 1px solid;
+  border-left: 2px solid;
   @apply border-lightyellow;
 }
 
